Bug 1151628 - Re-enable MJPEG in libyuv (especially for getUserMedia). r=glandium, a=sledru